--- a/capitulo-8/index.html
+++ b/capitulo-8/index.html
@@ -181,7 +181,7 @@
         <div class="box-columna-izq">
             <div class="box-item-timeline margin-bottom-112">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-1952.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1952</h4>
@@ -235,7 +235,7 @@
         <div class="box-columna-izq">
             <div class="box-item-timeline margin-top-159">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-1963.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1963</h4>
@@ -245,7 +245,7 @@
             </div>
             <div class="box-item-timeline margin-top-93">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-1966.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1966</h4>
@@ -258,7 +258,7 @@
             </div>
             <div class="box-item-timeline padding-bottom-105">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-1967.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1967</h4>
@@ -313,8 +313,8 @@
 
         <div class="box-columna-izq">
             <div class="box-item-timeline">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-1971.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1971</h4>
@@ -324,7 +324,7 @@
             </div>
             <div class="box-item-timeline">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-1973.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1973</h4>
@@ -334,7 +334,7 @@
             </div>
             <div class="box-item-timeline">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-1975.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1975</h4>
@@ -344,7 +344,7 @@
             </div>
             <div class="box-item-timeline padding-bottom-260 padding-top-190">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-1977.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1977</h4>
@@ -392,7 +392,7 @@
         <div class="box-columna-izq">
             <div class="box-item-timeline padding-bottom-250">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-1981.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1981</h4>
@@ -404,8 +404,8 @@
                 </div>
             </div>
             <div class="box-item-timeline">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-1983.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1983</h4>
@@ -415,7 +415,7 @@
             </div>
             <div class="box-item-timeline">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-1984.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1984</h4>
@@ -425,7 +425,7 @@
             </div>
             <div class="box-item-timeline padding-top-190 padding-bottom-100 padding-top-190-2">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-1986.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1986</h4>
@@ -438,7 +438,7 @@
             </div>
             <div class="box-item-timeline padding-bottom-82">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-1987.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1987</h4>
@@ -448,7 +448,7 @@
             </div>
             <div class="box-item-timeline padding-bottom-355">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-1988.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1988</h4>
@@ -525,8 +525,8 @@
 
         <div class="box-columna-izq">
             <div class="box-item-timeline padding-bottom-105 padding-top-50">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-1990.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1990</h4>
@@ -535,8 +535,8 @@
                 </div>
             </div>
             <div class="box-item-timeline padding-bottom-410">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra ">
+                    <img src="../img/bg-timeline-1991.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1991</h4>
@@ -546,7 +546,7 @@
             </div>
             <div class="box-item-timeline padding-bottom-1143">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-1993.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1993</h4>
@@ -561,8 +561,8 @@
                 </div>
             </div>
             <div class="box-item-timeline padding-top-190 padding-bottom-190-2 padding-top-190-3">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-1996.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1996</h4>
@@ -575,7 +575,7 @@
             </div>
             <div class="box-item-timeline padding-bottom-1660">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-1997.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>1997</h4>
@@ -751,7 +751,7 @@
         <div class="box-columna-izq">
             <div class="box-item-timeline padding-bottom-425">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-2000.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2000</h4>
@@ -760,8 +760,8 @@
                 </div>
             </div>
             <div class="box-item-timeline padding-bottom-2127">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-2001.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2001</h4>
@@ -771,7 +771,7 @@
             </div>
             <div class="box-item-timeline padding-bottom-740">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-2003.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2003</h4>
@@ -780,8 +780,8 @@
                 </div>
             </div>
             <div class="box-item-timeline padding-top-190 padding-bottom-2035 padding-bottom-2035-2">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-2004.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2004</h4>
@@ -791,7 +791,7 @@
             </div>
             <div class="box-item-timeline padding-bottom-328">
                 <div class="box-portada-obra">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                    <img src="../img/bg-timeline-2006.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2006</h4>
@@ -800,8 +800,8 @@
                 </div>
             </div>
             <div class="box-item-timeline padding-bottom-284">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-2007.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2007</h4>
@@ -810,8 +810,8 @@
                 </div>
             </div>
             <div class="box-item-timeline padding-bottom-672">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-2008.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2008</h4>
@@ -823,8 +823,8 @@
                 </div>
             </div>
             <div class="box-item-timeline padding-bottom-623">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-2009.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2009</h4>
@@ -833,8 +833,8 @@
                 </div>
             </div>
             <div class="box-item-timeline padding-bottom-1505">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-2010.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2010</h4>
@@ -1164,18 +1164,18 @@
 
         <div class="box-columna-izq">
             <div class="box-item-timeline padding-bottom-1435">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-2010-2.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2010</h4>
-                    <h5>Novela</h5>
-                    <h6>La Fiesta del Chivo</h6>
+                    <h5>Cuento</h5>
+                    <h6>Fonchito y la Luna</h6>
                 </div>
             </div>
             <div class="box-item-timeline padding-bottom-505">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-2012.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2012</h4>
@@ -1184,8 +1184,8 @@
                 </div>
             </div>
             <div class="box-item-timeline padding-bottom-220">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-2013.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2013</h4>
@@ -1194,8 +1194,8 @@
                 </div>
             </div>
             <div class="box-item-timeline padding-top-190 padding-bottom-1039 padding-bottom-1039-2 padding-bottom-1039-3">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-2014.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2014</h4>
@@ -1204,8 +1204,8 @@
                 </div>
             </div>
             <div class="box-item-timeline padding-bottom-715">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-2016.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2016</h4>
@@ -1214,8 +1214,8 @@
                 </div>
             </div>
             <div class="box-item-timeline">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-2018.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2018</h4>
@@ -1224,8 +1224,8 @@
                 </div>
             </div>
             <div class="box-item-timeline">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-2019.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2019</h4>
@@ -1415,8 +1415,8 @@
 
         <div class="box-columna-izq">
             <div class="box-item-timeline padding-bottom-95">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra ">
+                    <img src="../img/bg-timeline-2020.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2020</h4>
@@ -1425,8 +1425,8 @@
                 </div>
             </div>
             <div class="box-item-timeline padding-bottom-110">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-2021.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2021</h4>
@@ -1435,8 +1435,8 @@
                 </div>
             </div>
             <div class="box-item-timeline padding-bottom-70">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-2022.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2022</h4>
@@ -1445,8 +1445,8 @@
                 </div>
             </div>
             <div class="box-item-timeline">
-                <div class="box-portada-obra opacity">
-                    <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-portada-obra">
+                    <img src="../img/bg-timeline-2023.jpg" alt="" width="100%">
                 </div>                
                 <div class="box-texto-obra">
                     <h4>2023</h4>
