--- a/index.html
+++ b/index.html
@@ -23,13 +23,20 @@
         </div>
         <div class="box-texto-intro">
             <p class="capitular">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat exercitation ullamco.
+                Ha fallecido a los 88 años Mario Vargas Llosa, el escritor peruano más laureado. Con él muere también el último representante que quedaba del Boom Latinoamericano, grupo de escritores que puso el continente en el mapa mundial en la década de 1960, donde se encontraban también Julio Cortázar (Argentina), Gabriel García Márquez (Colombia), Carlos Fuentes (México), entre otros.
             </p>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat exercitation ullamco.
+                Nació en Arequipa en 28 de marzo de 1936 y de muy niño se fue a vivir a Bolivia; después volvió al Perú, donde radicó en Piura. Allí empezó a escribir, cuando estaba en secundaria, artículos publicados en el diario La Industria. Su vida en el norte también le inspiró literariamente, con “Los jefes” (1957), cuento basado en su etapa del colegio San Miguel. Tras reencontrarse con su padre, a quien por una mentira familiar creía muerto, se mudó a Miraflores, Lima, a la calle Diego Ferré. Culminó sus estudios escolares en el Colegio Militar Leoncio Prado, que a su vez fue inspiración para “La ciudad y los perros” (1963), su primera novela.
             </p>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat exercitation ullamco.
+                En la capital su vida transcurrió entre su matrimonio con su tía Julia Urquidi y su trabajo en Radio Panamericana, narrados en “La tía julia y el escribidor”, 1977; su paso por la Universidad Nacional Mayor de San Marcos, donde se graduó como Bachiller en Humanidades; y la publicación de relatos en medios peruanos, incluyendo El Comercio (“El abuelo”, 1956).
+            </p>
+            <p>
+                Se fue a vivir a París, Francia, donde su carrera literaria despegó con “La ciudad y los perros”, ganadora del premio Seix Barral. El éxito en la crítica y las ventas le dio el impulso necesario para continuar. Se casó en 1965 con su prima, Patricia Llosa, con la cual tuvo tres hijos: Álvaro, Gonzalo y Morgana. Publicó su segunda novela, “La casa verde” (1966), con igual éxito. Le seguirán con los años “Conversación en La Catedral” (1969), “Pantaleón y las visitadoras” (1973), “Historia de Mayta” (1984), “La fiesta del Chivo” (2000), “Travesuras de la niña mala” (2006), entre otras.
+            </p>
+            <p>
+                En 2010 recibió el Premio Nobel de Literatura por su “cartografía de las estructuras del poder y sus mordaces imágenes sobre la resistencia, la revuelta y la derrota individual”. En 2023 fue incorporado a la Academia Francesa, siendo el primer escritor en español en ser reconocido por su trabajo, marcadamente francófilo. “Le dedico mi silencio” (2023) fue su última novela.
+
             </p>
             <a href="./menu/">nuestro homenaje</a>
         </div>
