--- a/capitulo-3/index.html
+++ b/capitulo-3/index.html
@@ -19,7 +19,7 @@
             <a href="../menu/index.html">
                 <img src="../img/flecha-izq.png" alt="" width="100%">
                 Inicio
-            </a>            
+            </a>           
         </div>
         <div class="menu-button capitulo anterior">
             <a href="../capitulo-2/index.html">
@@ -40,7 +40,7 @@
     </nav>
 
     <div class="header-interior header-interior-capitulo-3">
-        <h5>Capítulo 3</h5>
+        <h5>Capítulo 1</h5>
         <h1>una vida en fotos</h1>
         <p class="interior-capitular">
             Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborisaliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
@@ -62,59 +62,142 @@
         <span class="separador-autor"></span>
     </div>
 
+    <img src="../img/flecha-subir.png" alt="" width="100%" class="flecha-subir">
+
     <div class="box-main-galeria">
         <div class="box-foto" id="foto-1">
             <img src="../img/bg-galeria-1.jpg" alt="" width="100%">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
+                Foto: Archivo familia Vargas Llosa.
             </p>
         </div>
         <div class="box-foto" id="foto-2">
             <img src="../img/bg-galeria-2.jpg" alt="" width="100%">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
+                Foto: Archivo Max Silva Tuesta.
             </p>
         </div>
         <div class="box-doble">
             <div class="box-foto" id="foto-3">
-                <img src="../img/bg-galeria-3.jpg" alt="" width="100%">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
-                </p>
-            </div>
-            <div class="box-foto" id="foto-4">
                 <img src="../img/bg-galeria-4.jpg" alt="" width="100%">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
+                    Foto: AFP.
                 </p>
-            </div>
+            </div>            
+        </div>
+        <div class="box-foto" id="foto-4">
+            <img src="../img/bg-galeria-3.jpg" alt="" width="100%">
+            <p>
+                Foto: Archivo UNMSM.
+            </p>
         </div>
         <div class="box-foto" id="foto-5">
             <img src="../img/bg-galeria-5.jpg" alt="" width="100%">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
+                Foto: Archivo familia Vargas Llosa.
             </p>
         </div>
         <div class="box-foto" id="foto-6">
             <img src="../img/bg-galeria-6.jpg" alt="" width="100%">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
+                Foto: Andina.
             </p>
         </div>
         <div class="box-foto" id="foto-7">
             <img src="../img/bg-galeria-7.jpg" alt="" width="100%">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
+                Foto: Getty Images.
             </p>
         </div>
         <div class="box-foto" id="foto-8">
             <img src="../img/bg-galeria-8.jpg" alt="" width="100%">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
+                Foto: Archivo histórico de El Comercio.
+            </p>
+        </div>
+
+        <div class="box-foto" id="foto-9">
+            <img src="../img/bg-galeria-9.jpg" alt="" width="100%">
+            <p>
+                Foto: Archivo familia Vargas Llosa.
+            </p>
+        </div>
+        <div class="box-foto" id="foto-10">
+            <img src="../img/bg-galeria-10.jpg" alt="" width="100%">
+            <p>
+                Foto: Archivo El Comercio.
+            </p>
+        </div>
+        <div class="box-doble">
+            <div class="box-foto" id="foto-11">
+                <img src="../img/bg-galeria-11.jpg" alt="" width="100%">
+                <p>
+                    Foto: AFP.
+                </p>
+            </div>
+            <div class="box-foto" id="foto-12">
+                <img src="../img/bg-galeria-12.jpg" alt="" width="100%">
+                <p>
+                    Foto: AP.
+                </p>
+            </div>
+        </div>
+        <div class="box-foto" id="foto-13">
+            <img src="../img/bg-galeria-13.jpg" alt="" width="100%">
+            <p>
+                Foto: AFP.
+            </p>
+        </div>
+        <div class="box-foto" id="foto-14">
+            <img src="../img/bg-galeria-14.jpg" alt="" width="100%">
+            <p>
+                Foto: Consuelo Vargas.
+            </p>
+        </div>
+        <div class="box-foto" id="foto-15">
+            <img src="../img/bg-galeria-15.jpg" alt="" width="100%">
+            <p>
+                Foto: AFP.
+            </p>
+        </div>
+        <div class="box-foto" id="foto-16">
+            <img src="../img/bg-galeria-16-2.jpg" alt="" width="100%">
+            <p>
+                Foto: EFE.
+            </p>
+        </div>
+
+        <div class="box-foto" id="foto-17">
+            <img src="../img/bg-galeria-17.jpg" alt="" width="100%">
+            <p>
+                Foto: Andina.
+            </p>
+        </div>
+        <div class="box-foto" id="foto-18">
+            <img src="../img/bg-galeria-18.jpg" alt="" width="100%">
+            <p>
+                Foto: AFP.
+            </p>
+        </div>        
+        <div class="box-foto" id="foto-19">
+            <img src="../img/bg-galeria-19.jpg" alt="" width="100%">
+            <p>
+                Foto: Presidencia de la República.
+            </p>
+        </div>        
+        <div class="box-foto" id="foto-20">
+            <img src="../img/bg-galeria-20.jpg" alt="" width="100%">
+            <p>
+                Foto: X de Alvaro Vargas Llosa.
+            </p>
+        </div>
+        <div class="box-foto" id="foto-21">
+            <img src="../img/bg-galeria-21.jpg" alt="" width="100%">
+            <p>
+                Ilustración: Víctor Aguilar.
             </p>
         </div>
     </div>
-
 
     <div class="box-footer">
         <img src="https://nuevasnarrativasec.github.io/edificio-comercio-centenario/img/logo-comercio.png" alt="" width="100%">
@@ -185,11 +268,42 @@
                     Alexander Quispe
                     <br>
                     Rodrigo Grijalba
+                    <br>
+                    Miriam Sánchez
                 </p>
             </li>
         </ul>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>   
+    <script src="https://d1ts5g4ys243sh.cloudfront.net/proyectos_especiales_prod/especiales/el-metro-interminable-ecpm/js/ScrollMagic.min.js"></script>
+
+    <!-- lapiz timeline -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var controller = new ScrollMagic.Controller();
+
+            var scene = new ScrollMagic.Scene({
+                triggerElement: ".box-main-autor",
+                triggerHook: 0.5, 
+                reverse: true 
+            })
+            .setClassToggle(".flecha-subir", "show") 
+            .addTo(controller);
+        });
+    </script>
+
+    <!-- flecha subir -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            document.querySelector(".flecha-subir").addEventListener("click", function () {
+                const targetElement = document.querySelector(".box-main-autor");
+                if (targetElement) {
+                    targetElement.scrollIntoView({ behavior: "smooth" });
+                }
+            });
+        });
+    </script>
 
 </body>
 </html>
