--- a/index.html
+++ b/index.html
@@ -14,11 +14,29 @@
 </head>
 <body id="intro">
     <div class="main-intro">
+        
         <div class="box-pantalla-inicio">
-            <h1>
-                <span>El escritor universal</span>
-                Mario Vargas Llosa
-            </h1>
+            <div class="ctn-box-pantalla-inicio">
+                <ul class="idiomas">
+                    <li>
+                        <p>idioma</p>
+                    </li>
+                    <div class="clear"></div>
+                    <li class="idioma-active">
+                        <p>español</p>
+                    </li>
+                    <li>
+                        <p>inglés</p>
+                    </li>
+                    <li>
+                        <p>francés</p>
+                    </li>
+                </ul>
+                <h1>
+                    <span>El escritor universal</span>
+                    Mario Vargas Llosa
+                </h1>
+            </div>            
             <img class="flecha" src="./img/flecha-bajar.png" alt="" width="100%">
         </div>
         <div class="box-texto-intro">
